# jimin-os

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COLOR_PLAYBOOK.md  CREATE_UI_PLAYBOOK.md  Cargo.toml  DESIGN.md  GEMINI.md  HARNESS.md  INTERACTION_PLAYBOOK.md  KOREA_EQUITY_RESEARCH.md  KOREA_MACRO_RESEARCH.md  KOREA_REAL_ESTATE_RESEARCH.md  LAYOUT_PLAYBOOK.md  LICENSE  PATTERN_GUIDE.md  README.md  REFERENCE_RESEARCH.md  STYLESEED.md  TERMS.md  WRITING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.cursor/rules/: opendock-backend-ultrawork.mdc  opendock-design-ultrawork.mdc  opendock-ux-writing-ultrawork.mdc
.github/workflows/: staging-images.yml
.opendock/: dock.lock.yml  project.yml
apps/agent/: Cargo.toml
apps/agent/src/: config.rs  health.rs  inflow_analysis.rs  main.rs  meeting_analysis.rs  worker_loop.rs
apps/agent/tests/fixtures/: generic-prompt.txt
apps/api/: Cargo.toml
apps/api/src/: auth.rs  calendar_oauth.rs  config.rs  google_chat_oauth.rs  lib.rs  main.rs  meetings.rs  probe.rs  push.rs  voice_command.rs  webhook.rs
apps/desktop/: .prettierignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.android-dev.conf.json  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/codex-client/: Cargo.toml
crates/domain/: Cargo.toml
crates/google/: Cargo.toml
crates/google/src/: lib.rs
crates/local-notifications-plugin/: Cargo.toml  build.rs
crates/local-notifications-plugin/android/: build.gradle.kts  settings.gradle
crates/local-notifications-plugin/android/src/main/: AndroidManifest.xml
crates/local-notifications-plugin/android/src/main/java/: LocalNotificationsPlugin.kt
crates/local-notifications-plugin/android/src/main/res/drawable/: jimin_notification.xml
crates/local-notifications-plugin/permissions/autogenerated/: reference.md
crates/local-notifications-plugin/permissions/autogenerated/commands/: ackPendingNavigation.toml  openSettings.toml  peekPendingNavigation.toml  permissionStatus.toml  pushToken.toml  reconcileScheduled.toml  takePendingNavigation.toml
crates/local-notifications-plugin/permissions/schemas/: schema.json
crates/local-notifications-plugin/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: agent.rs  auth.rs  calendar.rs  calendar_mutation.rs  gmail.rs  goals.rs  google_chat.rs  inflow_analysis.rs  intelligence.rs  lib.rs  meetings.rs  planning.rs  push.rs  sync.rs  webhook.rs  weekly_report.rs  work.rs
crates/storage/tests/: postgres.rs
crates/voice-recognition-plugin/: Cargo.toml  build.rs
deploy/: compose.fcm.yaml  compose.google-calendar.yaml  compose.local-phone-test.yaml  compose.staging.yaml  compose.tls-files.yaml  compose.yaml  versions.env
deploy/docker/: agent.Dockerfile  agent.Dockerfile.dockerignore  api.Dockerfile
deploy/env/: inventory.env.example  local.env.example  staging.env.example
deploy/gateway/: Caddyfile  Dockerfile  Dockerfile.dockerignore
deploy/secrets/: README.md
docs/: PROJECT_PLAN.md
docs/adr/: ADR-0001-codex-app-server-compatibility.md  ADR-0002-mobile-runtime.md  ADR-0003-deployment-tls.md  ADR-0004-device-pairing-app-identity.md  ADR-0005-vpn-trusted-personal-access.md  README.md
docs/runbooks/: CLIENT_BUILD_CONFIGURATION.md  CODEX_CREDENTIAL_RECOVERY.md  CODEX_DEVICE_AUTH.md  M0_LOCAL_DEPLOYMENT.md  M0_ROLLBACK.md  M0_STAGING_DEPLOYMENT.md  OPERATIONAL_VERIFICATION.md  TAURI_ANDROID.md  environment-inventory.md
docs/specs/: M0_DEPLOYMENT_SPIKE.md  M1_SERVER_FOUNDATION.md  M2_GOOGLE_CALENDAR.md  M3_CLIENTS.md  M4_SERVER_AGENT.md  M5_MEMORY.md  M6_MAC_WORKER.md  M7_HARDENING_RELEASE.md  README.md  SHARED_CONTRACTS.md
docs/verification/: ASSISTANT_OPERATIONS_2026-07-20.md  M0_CLIENT_HEALTH_UI_2026-07-10.md  M0_LOCAL_VALIDATION_2026-07-10.md  M0_VERIFICATION_TEMPLATE.md  P0_COMPLETION_2026-07-15.md  P0_PRIORITY_WORK_2026-07-14.md
migrations/: 0001_baseline.sql  0002_m1_identity.sql  0003_device_pairing.sql  0004_personal_planning.sql  0005_agent_conversations.sql  0006_agent_authentication.sql  0007_agent_action_approvals.sql  0008_google_calendar_foundation.sql  0009_calendar_oauth_secret_cleanup.sql  0010_gmail_inbox_foundation.sql  0011_workspaces_projects.sql  0012_agent_model_preferences.sql  0013_agent_reasoning_effort.sql  0014_agent_presentations.sql  0015_agent_task_due_at.sql  0016_agent_action_execution.sql  0017_agent_batch_action_execution.sql  0018_agent_project_deletion.sql  0019_project_webhooks.sql  0020_schedule_calendar_outbox.sql  0021_work_intelligence.sql  0022_work_brief_refresh.sql  0023_typed_webhook_destinations.sql  0024_retire_generic_webhooks.sql  0025_agent_webhook_action_audit.sql  0026_fcm_push_reminders.sql  0027_meeting_intelligence.sql  0028_google_chat_mention_directory.sql  0029_project_google_chat_inflow.sql  0030_task_delegation_and_inflow_sender.sql  0031_google_chat_inflow_completion.sql  0032_task_hierarchy.sql  0033_project_inflow_analysis.sql  0034_priority_brief_notifications.sql  0035_project_operating_modes.sql  0036_operation_projects_without_due_date.sql  0037_operation_project_schema_metadata.sql  README.md
scripts/: build-private-client.sh  build-staging-images.sh  codex-device-auth.sh  deploy-local-phone-test.sh  deploy-local.sh  deploy-staging.sh  export-caddy-root-ca.sh  install-local-mac-test.sh  install-local-phone-test.sh  install-private-android.sh  install-private-mac.sh  rollback-staging.sh  scan-secrets.sh  seed-ui-review.sql  smoke-deployment.sh  test-assistant-contracts.sh  test-assistant-live-smoke.mjs  test-client-build-config.sh  test-deploy-state.sh  test-postgres-integration.sh  validate-compose.sh  verify-codex-probes.sh
(+141 files in other folders)
