[workspace]
members = [
  "apps/agent",
  "apps/api",
  "crates/codex-client",
  "crates/observability",
  "crates/storage",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/Yaklede/jimin-os"

[workspace.dependencies]
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["http1", "json", "tokio"] }
clap = { version = "=4.6.1", features = ["derive", "env"] }
futures-util = "=0.3.32"
http-body-util = "=0.1.3"
secrecy = { version = "=0.10.3", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
sqlx = { version = "=0.9.0", default-features = false, features = ["derive", "macros", "migrate", "postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "uuid"] }
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["full"] }
tokio-util = { version = "=0.7.18", features = ["codec", "rt"] }
tower = { version = "=0.5.3", features = ["util"] }
tower-http = { version = "=0.7.0", features = ["catch-panic", "request-id", "trace"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "=5.5.0", features = ["axum_extras", "uuid"] }
uuid = { version = "=1.23.4", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
