[package]
name = "jimin-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "jimin-agent"
path = "src/main.rs"

[dependencies]
clap.workspace = true
jimin-codex-client = { path = "../../crates/codex-client" }
jimin-storage = { path = "../../crates/storage" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
