[package]
name = "jimin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
futures-util.workspace = true
jimin-observability = { path = "../../crates/observability" }
jimin-auth = { path = "../../crates/auth" }
jimin-application = { path = "../../crates/application" }
jimin-domain = { path = "../../crates/domain" }
jimin-storage = { path = "../../crates/storage" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
http-body-util.workspace = true
pkcs8.workspace = true
tower.workspace = true

[lints]
workspace = true
