[package]
name = "jimin-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
pkcs8.workspace = true

[lints]
workspace = true
