[package]
name = "jimin-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "jimin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
keyring.workspace = true
keyring-core.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-opener.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store.workspace = true

[lints]
workspace = true
